# my-first-app

./: .gitignore
backend/: Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: main.rs
backend/tests/: api_tests.rs
frontend/: admin.html  admin.js  index.html  script.js  style.css
